--- a/CRUD/CRUD.Web/ClientApp/package.json
+++ b/CRUD/CRUD.Web/ClientApp/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "nan": "^2.16.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.7.4"
   },
   "overrides": {
